--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -393,3 +393,13 @@ url = "http://www.sciencedirect.com/science/article/pii/S0010465510001438",
  address = {Institute for Operations Research and the Management Sciences (INFORMS), Linthicum, Maryland, USA},
  keywords = {NP-complete, computational complexity, jobshop scheduling},
 } 
+@article{waitingForExactBib,
+    author    = {Suraj Kumar and
+        Lionel Eyraud-Dubois and
+            Sriram Krishnamoorthy},
+    title     = {Performance Models for Data Transfers: A Case Study with Molecular Chemistry Kernels},
+    journal   = {CoRR},
+    volume    = {abs/},
+    year      = {2019},
+    url       = {https://arxiv.org/submit/2653435},
+}
